# cfd-signal-provider-bot---eurusd--gbpusd--xauusd

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
tests/: test_config.py  test_main.py
